--- a/mock/src/styles/main.css
+++ b/mock/src/styles/main.css
@@ -25,6 +25,26 @@
     margin: auto;
     display: block;
 }
+
+/* .history-item-table{
+    margin-left: auto;
+    margin-right: auto;
+} */
+
+.repl-history table {
+  margin-left: auto;
+  margin-right: auto;
+  border-collapse: collapse;
+  
+}
+
+th, td {
+    border: 1px dotted black;
+    padding: 8px;
+    text-align: left;
+}
+
+
 button{
     margin: auto;
     display: block;
